links added to boxpark buttons

--- a/boxPark.html
+++ b/boxPark.html
@@ -87,7 +87,7 @@
               </p>
             </div>
             <div class="article-first-button">
-              <button id="first-section-button" class="btn-box">More info</button>
+              <a href="packs.html"><button id="first-section-button" class="btn-box">More info</button></a>
             </div>
           </div>
           <div class="article-first">
@@ -106,7 +106,7 @@
               </p>
             </div>
             <div class="article-first-button">
-              <button id="first-section-button" class="btn-box">MORE INFO</button>
+              <a href="#link-jum-slider"><button id="first-section-button" class="btn-box">MORE INFO</button></a>
             </div>
           </div>
           <div class="article-first">
@@ -126,7 +126,7 @@
               </p>
             </div>
             <div class="article-first-button">
-              <button id="first-section-button"class="btn-box">MORE INFO</button>
+              <a href="packs.html"><button id="first-section-button"class="btn-box">MORE INFO</button></a>
             </div>
           </div>
         </div>
@@ -202,7 +202,7 @@
     </div>
     <!--SLIDER PARTNERS SECTION -->
 
-    <div class="slider-container">
+    <div class="slider-container" id="link-jum-slider">
       <div class="slider-title">
         <h1>DISCOVER OUR TE DIFFERENT PARTNERS!</h1>
         <p>
